--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a href="/projects.html" class="bottom">| Projects |</a>
           <a href="https://t.me/CaesarMessageBot" class="bottom">| FeedBack |</a>
           <a href="https://habr.com/ru/users/Caesar9252" class="bottom">| Habr |</a><br>
-          <a href="/relax.html">| To relax |</a>
+          <a href="https://caesar9252.github.io/resume-relax.github.io/">| To relax |</a>
 
 
           <p class="mrgn" style="margin-bottom: 30px;">Hello. You're arrived at Caesar's website...</p>
