--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <hr>
           <a href="caesarrabots@gmail.com" class="bottom">| Email |</a>
           <a href="https://t.me/CaesarPotok" class="bottom">| Bio |</a>
-          <a href="/projects.html" class="bottom">| Projects |</a>
+          <a href="https://caesar9252.github.io/resume-projects.github.io/" class="bottom">| Projects |</a>
           <a href="https://t.me/CaesarMessageBot" class="bottom">| FeedBack |</a>
           <a href="https://habr.com/ru/users/Caesar9252" class="bottom">| Habr |</a><br>
           <a href="https://caesar9252.github.io/resume-relax.github.io/">| To relax |</a>
