--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="with-device-width, initial-scale=1.0">
-        <title>Caesar resume</title>
+        <title>Caesar card</title>
         <meta name="discription" content="Резюме программиста Caesar">
         <meta name="color-scheme" content="light dark">
         <link rel="stylesheet" href="style.css">
