--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
           <div class="resume-card">
             
-          <img src="images/profile.jpg" alt="Deathgun" width="170" height="170">
+          <img src="images/Profile-img.jpg" alt="profimg" width="170" height="170">
           
           <h1 class="highlight-name">Caesar</h1>
 
